--- a/css/base.css
+++ b/css/base.css
@@ -19,3 +19,19 @@ html{
     height: 100vh;
     overflow: hidden;
 }
+
+@keyframes rotateX{
+    0%{
+        opacity: 0;
+        /* transform: rotateX(-90deg); */
+    }
+
+    50%{
+        /* transform: rotateX(20deg); */
+    }
+
+    100%{
+        opacity: 1;
+        /* transform: rotateX(0) */
+    }
+}
